    (Jelmer Vernooij, #486811)

  * Transport.is_readonly() is now respected. (Jelmer Vernooij, #731268)

  * Fix ControlDir.sprout() implementation for newer versions of bzr.
    (Jelmer Vernooij, #717937)

  * bzr-svn no longer uses file properties to store metadata anymore, unless
    `allow_metadata_in_file_properties`. (Jelmer Vernooij, #704716)

 FEATURES

  * When roundtripping revisions a revision property with the Bazaar testament is
    now set as a revision property. (Jelmer Vernooij)

  * bzr-svn now requires Bazaar 2.3 or higher. (Jelmer Vernooij)

  * `bzr rmbranch` was implemented.  (Jelmer Vernooij, #731305)

 INTERNALS

  * Switch to using record_iter_changes style committing everywhere.
    (Jelmer Vernooij)

  * Implement InterOtherSvnBranch.copy_content_into. (Jelmer Vernooij,
     #731289)

  * Push is now record_iter_changes() based. (Jelmer Vernooij, #387623)

bzr-svn 1.0.4					  2010-08-30

 BUG FIXES

  * Set file revisions based on history rather than on magic file properties.
    (Jelmer Vernooij, #480102)

  * Cope with invalid svk:merge properties during fetch. 
    (Jelmer Vernooij, #504458)

  * Avoid backtrace when getting 175200 error during log fetch.

  * Warn when inconsistencies between cache and repository are 
    detected. (Jelmer Vernooij, #594872)

  * Cope with non-ascii characters in branch names properly.
    (Jelmer Vernooij, #500519)

  * During incremental "fetching svn revision info", don't print progress info
    is as if it had started afresh (Max Bowsher, #500991)

  * Cope with copying from paths with a # sign in them. (Jelmer Vernooij)

  * Avoid fetching revision info for single unnecessary revision.
    (Jelmer Vernooij)

  * Support revision tracking when copying from root. (Jelmer Vernooij,
     #438928)

  * Fix handling of revision metadata. (Jelmer Vernooij, #612611)

  * Print proper errors on invalid working copies. (Jelmer Vernooij, #404598)
