@@ -70,6 +70,8 @@ bzr-svn 1.1.0					  UNRELEASED
   * bzr-svn no longer uses file properties to store metadata anymore, unless
     `allow_metadata_in_file_properties`. (Jelmer Vernooij, #704716)
 
+  * Implement more efficient ``InterFromSvnBranch.fetch``. (Jelmer Vernooij, #741760)
+
  FEATURES
 
   * When roundtripping revisions a revision property with the Bazaar testament is
